--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,15 @@
   "description": "Adds a print button to the browser.",
   "version": "1.2",
   "background": {
-    "scripts": ["test.js"],
+    "scripts": ["background.js"],
     "persistent": false
   },
   "permissions": [
     "activeTab"
   ],
   "browser_action": {
-      "default_title": "Print this page",
-      "default_icon": "arrow_up.png",
+      "default_title": "Quick StackOverflow",
+      "default_icon": "so-icon.png",
       "default_popup":"home.html"
   },
   "manifest_version": 2
