--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "persistent": false
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "https://api.stackexchange.com/"
   ],
   "browser_action": {
       "default_title": "Quick StackOverflow",
