added logic to save default pref on plugin start

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "description": "Adds a print button to the browser.",
   "version": "1.2",
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["./js/preferences.js","background.js"],
     "persistent": false
   },
   "permissions": [
