--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,7 @@
   ],
   "browser_action": {
       "default_title": "Quick StackOverflow",
-      "default_icon": "so-icon.png",
-      "default_popup":"home.html"
+      "default_icon": "so-icon.png"
   },
   "manifest_version": 2
 }
